--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ body {
 ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 5px;
   overflow: hidden;
-  background-color: #7c0a02;
+  background-color: #cc0000;
   position: fixed;
   top: 0;
   width: 100%;
@@ -15,6 +15,8 @@ ul {
 
 li {
   float: right;
+  padding-right: 20px;
+  font-size: 1.5rem;
 }
 
 li a {
@@ -31,4 +33,25 @@ li a:hover:not(.active) {
 
 .active {
   background-color: #04aa6d;
+}
+.intro {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
+  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+}
+.hey {
+  color: white;
+  font-size: 3rem;
+  margin: 10px;
+}
+.web {
+  color: #cc0000;
+  font-size: 2rem;
+  margin: 0%;
 }
