--- a/style.css
+++ b/style.css
@@ -60,8 +60,61 @@ footer {
   display: flex;
   justify-content: space-evenly;
   background-color: black;
+  height: 13vh;
+  padding-top: 30px;
   color: white;
   margin-top: 2.5px;
-
-  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+  background-color: #303841;
+}
+.contact-section {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-color: #303841;
+  width: 100%;
+  height: 80vh;
+  text-align: center;
+}
+.contact1 > h2 {
+  font-size: 4rem;
+  color: white;
+  align-self: center;
+  margin: 0%;
+}
+.contact1 > p {
+  font-size: 1rem;
+  color: white;
+  align-self: center;
+  font-style: italic;
+}
+.contact-details:hover {
+  transform: translateY(8px);
+}
+.contact2 {
+  font-size: 30px;
+}
+.fa-facebook {
+  color: white;
+}
+.fa-twitter {
+  color: white;
+}
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+.fa-google {
+  color: white;
+  font-size: 48px;
+}
+.fa-phone {
+  color: white;
+}
+.fa-github {
+  color: white;
 }
