--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: #be3144;
+  background-color: #45567d;
 }
 
 ul {
@@ -48,7 +48,7 @@ li a:hover:not(.active) {
 }
 .hey {
   color: white;
-  font-size: 3rem;
+  font-size: 4rem;
   margin: 10px;
 }
 .web {
@@ -61,10 +61,15 @@ footer {
   justify-content: space-evenly;
   background-color: black;
   height: 13vh;
+  margin-left: 0%;
+  margin-right: 0%;
   padding-top: 30px;
+  width: 100%;
   color: white;
-  margin-top: 2.5px;
   background-color: #303841;
+  border: #303841;
+  border-style: solid;
+  border-top-color: #be3144;
 }
 .contact-section {
   display: flex;
@@ -117,4 +122,59 @@ footer {
 }
 .fa-github {
   color: white;
+}
+.projects-section {
+  text-align: center;
+  padding: 10rem 2rem;
+  background: #45567d;
+}
+
+.projects-section-header {
+  display: flex;
+  max-width: 640px;
+  margin: 0 auto 6rem auto;
+  font-size: 2.5rem;
+  margin: 0%;
+  margin-left: 250px;
+  padding: 50px;
+  justify-content: end;
+  align-items: center;
+  color: white;
+}
+
+@media (max-width: 28.75em) {
+  .projects-section-header {
+    font-size: 4rem;
+  }
+}
+
+/* "Automagic" image grid using no media queries */
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 4rem;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 20px;
+  margin-bottom: 6rem;
+}
+
+.project {
+  background: #303841;
+  border-radius: 2px;
+}
+
+.project-image {
+  height: calc(100% - 6.8rem);
+  width: 100%;
+  object-fit: cover;
+}
+
+.project-title {
+  font-size: 2rem;
+  color: aliceblue;
+  padding: 2rem 0.5rem;
+  margin: 0%;
+  align-self: center;
 }
