--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ li a:hover:not(.active) {
 }
 .hey {
   color: white;
+  font-family: "Poppins", sans-serif;
   font-size: 4rem;
   margin: 10px;
 }
