--- a/style.css
+++ b/style.css
@@ -179,3 +179,11 @@ footer {
   margin: 0%;
   align-self: center;
 }
+
+.slideshow-container {
+  max-width: 700px;
+  height: 700px;
+  margin: 0 auto;
+  padding: 20px;
+  margin-bottom: 6rem;
+}
